--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game by KAZI</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="game-container">
-        <div class="welcome-screen" id="welcomeScreen">
-            <div class="welcome-box">
-                <h1>Welcome to Snake Game!</h1>
-                <p>Press SPACE to Start</p>
-            </div>
-        </div>
-        <canvas id="gameCanvas"></canvas>
-        <div class="score-container">
-            <div class="score">Score: <span id="score">0</span></div>
-            <div class="high-score">High Score: <span id="highScore">99</span></div>
-        </div>
-        <div class="signature">Made BY KAZI</div>
-    </div>
-    <script src="game.js"></script>
-</body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Classic Snake Game - A modern web remake with multiple game modes, difficulty levels, and power-ups. Play now!" />
+    <meta name="keywords" content="snake game, web game, arcade, javascript, react, canvas" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>Snake Game - Classic Arcade</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
