feat: Heavy upgrade - Vue 3 + Full Game Features
- Added dark/light/system theme support
- Implemented comprehensive settings panel
- Added game statistics tracking
- Implemented full keyboard controls (WASD + Arrow keys)
- Added accessibility features (ARIA, keyboard navigation)
- Added difficulty levels (easy/normal/hard)
- Created new Pinia stores (game, settings, stats)
- Added 3 composables (useSnakeGame, useKeyboardControls, useAudio)
- Created SettingsPanel component with help modal
- Added linting with ESLint + Prettier
- Updated build configuration for GitHub Pages
- Comprehensive README with screenshots and setup guide

BREAKING CHANGE: Upgraded from basic Vue setup to full-featured game

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neon Snake | Production-Ready Arcade</title>
+    <meta name="description" content="Neon Snake - A professional WebGL arcade reconstruction of the classic Snake game built with Vue 3." />
+    <meta name="theme-color" content="#050510" />
+    <title>Neon Snake | Arcade Game</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Press+Start+2P&display=swap&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-neon-bg text-white overflow-hidden">
+  <body class="bg-neon-dark text-neon-light overflow-hidden antialiased">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
